Agregue el Activity splash screen de Bienvenidad, Modifique gradle: de guia y posicion de los elmentos en la vista previa

--- a/Lab1-UI/src/main/AndroidManifest.xml
+++ b/Lab1-UI/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
         <activity android:name=".ServicioActivity" />
         <activity android:name=".ComidaActivity" />
-        <activity android:name=".BebidasActivity"></activity>
+        <activity android:name=".BebidasActivity" />
     </application>
 
 </manifest>
