0. Loguin, rgistro, SQLite 1. Activity Login 2. Activity Usuario registro 3. SQLite Tabla usuario(foto, nombre, email pass)

--- a/Lab2Activities/src/main/AndroidManifest.xml
+++ b/Lab2Activities/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:name=".ServiciosActivityNavigationDrawer"
             android:label="@string/title_activity_servicios_navigation_drawer"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".UsuarioAtivity"></activity>
     </application>
 
 </manifest>
