--- a/Lab2Activities/src/main/AndroidManifest.xml
+++ b/Lab2Activities/src/main/AndroidManifest.xml
@@ -32,7 +32,10 @@
         <activity
             android:name=".DrinkActivity"
             android:parentActivityName=".ServiciosActivityNavigationDrawer" />
-        <activity android:name=".ListDrinkActivity"
+        <activity
+            android:name=".list_drink_recycler_Activity"
+            android:parentActivityName=".ServiciosActivityNavigationDrawer" />
+        <activity android:name=".list_food_recycler_activity"
             android:parentActivityName=".ServiciosActivityNavigationDrawer" />
     </application>
 
