--- a/Lab2Activities/build.gradle
+++ b/Lab2Activities/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'com.github.clans:fab:1.6.4'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 }
