--- a/lab3servicesgr02/build.gradle
+++ b/lab3servicesgr02/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.android.volley:volley:1.1.1'
 }
