--- a/lab3servicesgr02/src/main/AndroidManifest.xml
+++ b/lab3servicesgr02/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="co.edu.udea.compumovil.gr02_20182.lab3">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
