--- a/Lab4FCM/src/main/AndroidManifest.xml
+++ b/Lab4FCM/src/main/AndroidManifest.xml
@@ -2,13 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="co.edu.edua.compumovil.gr02_20182.lab4">
 
-
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/><!-- Mirar si hay conexion de internet -->
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/> <!-- ​ service que se ejecute automáticamente cuando el dispositivo inicie (BOOT) -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- Mirar si hay conexion de internet -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-
+    <!-- ​ service que se ejecute automáticamente cuando el dispositivo inicie (BOOT) -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -26,8 +25,9 @@
 
         <receiver android:name=".Sync.BootupReceiver">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
 
@@ -45,8 +45,6 @@
         <activity
             android:name=".DrinkActivity"
             android:parentActivityName=".ServiciosActivityNavigationDrawer" />
-
     </application>
-
 
 </manifest>
