1. Enlazamos nuestro aplicacion con Firebase     buil.gradle      Proyecto: classpath 'com.google.gms:google-services:4.0.1'      Modulo lab4:   implementation 'com.google.firebase:firebase-auth:16.0.4'
2 Autenticacion con cuenta Google

--- a/Lab4FCM/src/main/AndroidManifest.xml
+++ b/Lab4FCM/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <activity
             android:name=".DrinkActivity"
             android:parentActivityName=".ServiciosActivityNavigationDrawer" />
+        <activity android:name=".PerfilActivity"
+            android:parentActivityName=".ServiciosActivityNavigationDrawer" />
     </application>
 
 </manifest>
