--- a/Lab4FCM/build.gradle
+++ b/Lab4FCM/build.gradle
@@ -26,7 +26,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -41,4 +41,17 @@ dependencies {
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.android.volley:volley:1.1.1'
+
+    implementation 'com.google.firebase:firebase-core:16.0.1'    //Analytics
+    implementation 'com.google.firebase:firebase-database:16.0.3'    //	Realtime Database
+    implementation 'com.google.firebase:firebase-storage:16.0.3'    //Storage
+    implementation 'com.google.firebase:firebase-messaging:17.3.3'    //Cloud Messaging
+    implementation 'com.google.firebase:firebase-auth:16.0.4'    //	Authentication firebase
+    // implementation 'com.google.android.gms:play-services-auth:16.0.4' //autenticacion google
+    //implementation 'com.google.firebase:firebase-auth:16.0.3'
+    implementation 'com.google.android.gms:play-services-auth:16.0.0' //autenticacion google
+    implementation 'com.github.bumptech.glide:glide:3.7.0' //para ver foto de url con glide
+
 }
+
+apply plugin: 'com.google.gms.google-services'
