--- a/Lab4FCM/src/main/AndroidManifest.xml
+++ b/Lab4FCM/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- Mirar si hay conexion de internet -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
+
     <!-- ​ service que se ejecute automáticamente cuando el dispositivo inicie (BOOT) -->
     <application
         android:name=".Firebase.MyFirebaseApp"
@@ -49,6 +50,21 @@
             android:name=".ServiciosNavigationDrawer"
             android:label="@string/title_activity_servicios_navigation_drawer"
             android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <service android:name=".Firebase.MiFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <service android:name=".Firebase.MiFirebaseInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
+
+
     </application>
 
 </manifest>
